Working endpoints with Swagger API docs
